<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rec"
        android:elevation="@dimen/cardview_default_elevation"
        app:iconifiedByDefault="false"
        app:layout_constraintBottom_toTopOf="@id/result"
        app:layout_constraintEnd_toStartOf="@+id/spinner_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="search city ..... " />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_filter"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/filter"
        app:layout_constraintBottom_toBottomOf="@+id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_go_to_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#f1f2f6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_location_24" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/main_text"
                style="@style/textStyle.large"
                android:layout_marginTop="60dp"
                android:text="@string/main_text"
                app:layout_constraintBottom_toTopOf="@id/subtext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/error_text"
                style="@style/textStyle.large"
                android:layout_marginTop="120dp"
                android:text="@string/no_result"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/error_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subtext"
                style="@style/textStyle.small"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="24dp"
                android:text="@string/sub_text"
                app:layout_constraintBottom_toTopOf="@id/search_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_text" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/search_photo"
                style="@style/lotte"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtext"
                app:lottie_rawRes="@raw/searchhh" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/error_photo"
                style="@style/lotte"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/error_text"
                app:lottie_rawRes="@raw/shopcashempty" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:fontFamily="@font/basic"
                android:text="Country According to Cities"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/country_chart"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toTopOf="@id/card_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text"
                tools:ignore="MissingClass" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/photo_city"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@id/card_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/map" />

            <TextView
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="160dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/country_name"
                android:textColor="@color/text_color"
                android:textSize="50sp"
                app:layout_constraintBottom_toTopOf="@id/card_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/photo_city" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_info"
                style="@style/views"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/main_color"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:layout_constraintBottom_toTopOf="@id/cities"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/v_country_population"
                        style="@style/textStyle.large"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/basic"
                        android:text="@string/total_population" />

                    <TextView
                        android:id="@+id/country_population"
                        style="@style/textStyle"
                        android:drawableStart="@drawable/ic_baseline_people_24"
                        android:fontFamily="@font/basic"
                        android:text="@string/_22_333_455"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/v_city_population"
                        style="@style/textStyle.large"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/basic"
                        android:text="@string/Population" />

                    <TextView
                        android:id="@+id/city_population"
                        style="@style/textStyle"
                        android:drawableStart="@drawable/ic_baseline_people_24"
                        android:fontFamily="@font/basic"
                        android:text="@string/_33_521_452"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/v_country_captail"
                        style="@style/textStyle.large"
                        android:layout_marginTop="16dp"
                        android:text="@string/capital" />

                    <TextView
                        android:id="@+id/country_captail"
                        style="@style/textStyle"
                        android:drawableStart="@drawable/ic_baseline_stars_24"
                        android:fontFamily="@font/basic"
                        android:text="@string/capital_name"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/v_city_country"
                        style="@style/textStyle.large"
                        android:layout_marginTop="16dp"
                        android:text="@string/country" />

                    <TextView
                        android:id="@+id/city_country"
                        style="@style/textStyle"
                        android:drawableStart="@drawable/ic_baseline_stars_24"
                        android:fontFamily="@font/basic"
                        android:text="@string/Country_name"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/v_iso2"
                        style="@style/textStyle.large"
                        android:layout_marginTop="16dp"
                        android:text="@string/iso2" />

                    <TextView
                        android:id="@+id/iso2"
                        style="@style/textStyle"
                        android:drawableStart="@drawable/ic_baseline_language_24"
                        android:fontFamily="@font/basic"
                        android:text="@string/iso2_name"
                        android:textSize="@dimen/large_textsize" />
                    <!--                    <TextView-->
                    <!--                        android:id="@+id/v_time"-->
                    <!--                        style="@style/textStyle.large"-->
                    <!--                        android:layout_marginTop="16dp"-->
                    <!--                        android:text="Time"/>-->

                    <!--                    <TextView-->
                    <!--                        android:id="@+id/time"-->
                    <!--                        android:text="22:33:55"-->
                    <!--                        android:drawableStart="@drawable/ic_baseline_people_24"-->
                    <!--                        style="@style/textStyle"-->
                    <!--                        android:textSize="20sp" />-->
                    <TextView
                        android:id="@+id/v_iso3"
                        style="@style/textStyle.large"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/basic"
                        android:text="@string/iso3" />

                    <TextView
                        android:id="@+id/iso3"
                        style="@style/textStyle"
                        android:layout_marginBottom="16dp"
                        android:drawableStart="@drawable/ic_baseline_language_24"
                        android:drawablePadding="7dp"
                        android:fontFamily="@font/basic"
                        android:text="@string/ISO3_Name"
                        android:textSize="@dimen/large_textsize" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="16dp"
                app:cardBackgroundColor="@color/main_color"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cities_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/basic"
                        android:text="@string/cities"
                        android:textColor="@color/text_color"
                        android:textSize="30sp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:text="@string/sort_cities_by"
                            android:textSize="@dimen/normal_textsize"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/sort_by_spinner"
                            android:layout_width="188dp"
                            android:layout_height="19dp"
                            android:layout_marginStart="8dp"
                            android:entries="@array/city_list"
                            app:layout_constraintBottom_toBottomOf="@+id/textView6"
                            app:layout_constraintStart_toEndOf="@+id/textView6"
                            app:layout_constraintTop_toTopOf="@+id/textView6" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        android:clickable="true"
                        android:divider="@color/black"
                        android:dividerHeight="2dp"
                        android:focusable="true"
                        android:orientation="horizontal"
                        android:scrollbarAlwaysDrawVerticalTrack="true"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_city" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>